fixed overlapping

--- a/src/app/main/navbar/navbar.component.scss
+++ b/src/app/main/navbar/navbar.component.scss
@@ -2,16 +2,8 @@
   flex-shrink: 0;
   width: 100%;
   height: 10%;
-  position: absolute;
+  position: fixed;
   transition: 0.3s;
-}
-
-.navbar-toggler {
-  aspect-ratio: 1/1;
-  width: 10%;
-  background-repeat: no-repeat;
-  background-size: contain;
-  margin-left: 5px;
 }
 
 .navbar {
@@ -164,6 +156,9 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+
+
+
   .navbar {
     display: flex;
     flex-direction: row;
@@ -295,6 +290,15 @@
 }
 
 @media screen and (min-width: 425px) and (max-width: 767px) {
+
+  .navbar-toggler {
+    aspect-ratio: 1/1;
+    width: 10%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: 5px;
+  }
+
   .navbar {
     display: flex;
     flex-direction: row;
